fixed sloppy resizing and grids overlapping browser

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -415,7 +415,7 @@ h4 {
 	
 	#browser {
 	    position:relative;
-	    width:924px;
+	    width:960px;
 	    border:1px solid rgb(34,34,34);
 	    margin-bottom:40px;
 	    top:-1px;
